--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,6 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "1.12.4",
-    "jquery-ui":"1.12.1",
+    "jquery-ui":"1.12.1"
   }
 }
